--- a/Desafio3/package.json
+++ b/Desafio3/package.json
@@ -1,20 +1,16 @@
 {
-  "name": "curso-backend-2do_intento",
+  "name": "desafio3",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/app.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "type": "module",
+  "type":"module",
   "license": "ISC",
-  "devDependencies": {
-    "nodemon": "^3.0.1"
-  },
   "dependencies": {
-    "express": "^4.18.2"
+    "moment": "^2.29.4"
   }
 }
