--- a/Desafio5/package.json
+++ b/Desafio5/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aaa",
+  "name": "desafio5",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -16,6 +16,8 @@
   "dependencies": {
     "express": "^4.18.2",
     "moment": "^2.29.4",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "express-handlebars": "^7.1.2",
+    "socket.io": "^4.7.2"
   }
 }
