--- a/Desafio7/package.json
+++ b/Desafio7/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "desafio6",
+  "name": "desafio7",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -14,12 +14,16 @@
     "nodemon": "^3.0.1"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.3.1",
     "moment": "^2.29.4",
     "multer": "^1.4.5-lts.1",
+    "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
     "express-routemap": "^1.6.0",
     "mongoose": "^7.5.0",
+    "mongoose-paginate-v2": "^1.7.31",
     "socket.io": "^4.7.2"
   }
 }
